exam_maket_aboutus+kontakty

--- a/Exam_maket/aboutus.html
+++ b/Exam_maket/aboutus.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 </head>
 <body>
 	<body class="home_page">
@@ -25,85 +26,56 @@
 						<a href="kontakty.html">контакты</a>
 					 </nav>	
 					 <div class="clear"></div>
-				 </div><!-- .content -->
+				 </div>
 			</header>
 			<div class="content">
 				<div class="baseinfo">
-				<h2 class="dashed">наша команда</h2>
-				<p class="description"> На пути йоги очень важен знающий проводник, и этим проводником должен стать ваш преподаватель. Очень важно найти именно "своего" человека, с которым Вам приятно работать и хочется продолжать и углублять практику.</p>
-				</div><!-- .baseinfo-->
-				<div class="sectioncontainer"><a name="teacher1"></a>
+				<h2 class="dashed" style="font-family: inherit;">Наша команда</h2>
+				<p class="description" style="color: black;">"Наш главный принцип - каждый день становиться лучше, это касается и продукции и сервиса. На сегодняшний день мы полностью перешли на премиальное сырье. Плитка отличается долговечностью, повышенной морозостойкостью, идеальной геометрией и качественным окрасом. Любой профессиональный укладчик и я рекомендую Вам покупать такую плитку”</p>
+				</div>
+				<div class="sectioncontainer">
 					<div class="mainsection">
 						<div class="textblock">
-							<img src="img/yogateacherKirillButko.jpg" class="positionleft" alt="kirill butko" title="kirill butko">
-							<h3>Кирилл Бутко</h3>
-							<h4>Сертифицированный преподаватель и основатель студии йоги "Mindbody"</h4>
-							<p class="short">Кирилл начал заниматься йогой около 20 лет назад - сначала сам, затем в группах под руководством отечественных преподавателей - Евгения Быстрова, Виктора Шапокляк, Александра Сутронога и Ирины Зорькиной.</p>
-							<p class="short">C 1993 года ежегодно участвует в выездных семинарах, проводимых иностранными учителями йоги. Стаж предподавания йоги в группах - более 10 лет. Также обладает прекрасными навыками и техниками проведения аюрведического массажа.</p><a name="teacher2"></a>
+							<img src="images/aboutus/Egor.jpg" class="positionleft" alt="Egor" title="Egor">
+							<h3>Егор Матусевич</h3>
+							<h4>Владелец, директор, маркетолог, администратор сайта masterstroy.by, завхоз, водитель и немного дизайнер.</h4>
+							<p class="short" style="color: black;">Столярный опыт отсутствует, нет, конечно, что -то умею, но, это смотря с кем, сравнивать. Если бы волей случая, не оказался в этом проекте, то не познакомился бы с замечательными людьми, Профессионалами своего дела, которые создают неповторимую атмосферу нашей школы-мастерской, в которую хочется возвращаться.</p>
+							<p class="short" style="color: black;">Наша команда очень старается, чтобы столярная школа жила и развивалась. Нам очень важна и нужна ваша поддержка. Даже просто придя к нам в мастерскую на бесплатное ознакомительное посещение, вы поддерживаете в нас уверенность, что мы делаем что-то нужное.</p>
 							<div class="clear"></div>
-						</div><!-- .textblock-->
+						</div>
 						<div class="textblock">
-							<img src="img/yogateacherMariyaBelskaya.jpg" class="positionleft" alt="mariya belskaya" title="mariya belskaya">
-							<h3>Мария Бельская</h3>
-							<h4>Сертифицированный преподаватель хатха-йоги, йоги для детей и подростков</h4>
-							<p class="short">Более 10 лет занимается Хатха йогой, вопросами самопознания и саморазвития, психофизической саморегуляцией. Является ученицей Школы самопознания «ВНЕО». С 2000 г. является участником тренингов и семинаров, проходящих в Минске, Москве, Санкт-Петербурге и др. На своих занятиях Елена помогает своим ученикам получить бесценный опыт устойчивого и управляемого внимания, обучает их основам релаксации и глубинного покоя. В результате такого подхода, ученики получают возможность продлевать состояние общего психофизического равновесия в повседневную жизнь. Обладает большим опытом и способностью работать в детских группах, в чем немало помогает первое педагогическое образование.</p><a name="teacher3"></a>
+							<img src="images/aboutus/Elena.jpg" class="positionleft" alt="Nadzezhda" title="Nadzezhda">
+							<h3>Надежда Железняк</h3>
+							<h4>Впервые попала как ученица одного из курсов, и ей так понравилась атмосфера</h4>
+							<p class="short" style="color: black;">Сразу чудо не произошло, и пришлось возвращаться к своей работе. Чудо, на то и чудо, потому что не знаешь когда оно случится, но всё равно ждешь. Как говорится-главное верить!Теперь, когда я здесь, хочу сказать, что счастлива быть частью такой замечательной профессиональной команды, благодаря которой приобретаю новые знания и навыки. </p>
 							<div class="clear"></div>
-						</div><!-- .textblock-->
+						</div>
 						<div class="textblock">
-							<img src="img/yogateacherViktoriyaKruk.jpg" class="positionleft" alt="viktoriya kruk" title="viktoriya kruk">
-							<h3>Виктория Крук</h3>
-							<h4>Сертифицированный преподаватель йоги с медицинским образованием</h4> 
-							<p class="short">Виктория имеет высшее медицинское образование (Минский медицинский инстутут). Первая врачебная категория. Опыт работы в педиатрии, интенсивной терапии, стаж работы - более 10 лет. 
-							Первоначальный интерес к йоге возник давно, в начале 90-х годов, и был связан, в основном, с ее целительным воздействием на организм человека. И в результате личной практики Виктория избавилась от нескольких хронических заболеваний. Виктория ведет занятия по йога-терапии, преподает йогу для беременных, женский класс, помогая выстроить практику, исходя из физиологических особенностей каждого ученика. Она является одним из преподавателей, работающих с подростками, имеющими серьезные нарушения в осанке. 
+							<img src="images/aboutus/Mikhail.jpg" class="positionleft" alt="Mikhail" title="Mikhail">
+							<h3>Михаил Гребеник</h3>
+							<h4>В мастерской с начала ее работы, принимал непосредственное участие в открытии и организации компании masterstroy.by.</h4> 
+							<p class="short" style="color: black;">Михаил Павлович может добавить «изюминку» даже в простое изделие и всегда очень внимателен к деталям, от него веет спокойствием и профессионализмом. Благодаря этому человеку у нас в мастерской появляются разные предметы из прошлого, старые книги по столярному ремеслу, интересные деревяшки, запчасти от пианино 19 века.</p> 
 							<div class="clear"></div>
-						</div><!-- .textblock-->
-						<div class="textblock"><a name="teacher4"></a>
-							<img src="img/yogateacherEvgeniyaKrishnaitova.jpg" class="positionleft" alt="evgeniya krishnaitova" title="evgeniya krishnaitova">
-							<h3>Евгения Кришнаитова</h3>
-							<h4>Сертифицированный преподаватель йоги, опытный психолог</h4>
-							<p class="short">Евгения начала практиковать йогу в 1999 году под руководством опытного йога-преподавателя и инструктора Екатерины Мельниковой.  С тех пор она практиковала йогу самостоятельно и в группах, поcещала семинары по йоге Айенгара. С 2006 года начала преподавать взрослую и детскую йогу самостоятельно и в группах.</p>
-							<p class="short">Будучи практикующим психологом, Катерина помогает своим ученикам применять йогические знания в жизни, такие как: контроль эмоциональных состояний, самообладание в критических ситуациях, работа с самооценкой, работа с эго, повышение осознанности, способствование духовному росту, работа с отношением учеников к жизненным переменам.</p>
+						</div>
+						<div class="textblock">
+							<img src="images/aboutus/Mark.jpg" class="positionleft" alt="Mark" title="Mark">
+							<h3>Марк Богданов</h3>
+							<h4>Первый по росту и второй по длительности работы в нашей компании.</h4>
+							<p class="short" style="color: black;">Вот, что говорит Марк о себе: «Так вышло, что в моем роду есть и художники и строители. Я продолжил эту цепочку, объединив эти профессии. Мечта быть дизайнером и при этом изготавливать задуманное своими руками воплотилась в жизнь.</p>
+							<p class="short" style="color: black;">Кстати, по одной из версий имя Марк произошло от греческого имени Маркос, которое имеет латинские корни и произошло в свою очередь от латинского слова «marcus», означающего «молоток».</p>
 							<div class="clear"></div>
-						</div><!-- .textblock-->
-					</div><!-- .mainsection-->
-					<div class="minorsection">
-						<ul>
-							<li class="mainli">
-								<p class="head">практика йоги: начало.</p>
-								<p class="link"><a href="http://yogastudio.by/yoga_beginning.html" class="maina" target=_blank>Если вы никогда не занимались йогой, обратите внимание на предлагаемые советы, они сделают ваше знакомство с йогой легким, понятным и приятным.</a></p>
-							</li>
-							<li class="mainli">
-								<p class="head">йога: комплект для практики</p>
-								<p class="link"><a href="http://yogastudio.by/komplekt_dlya_praktiki.html" class="maina" target=_blank>Прежде всего, для занятий йогой необходимо приобрести собственный коврик. Во-первых, это гигиенично, во-вторых, каждая личная вещь хранит и накапливает энергетику владельца.</a></p>
-							</li>
-							<li class="mainli">
-								<p class="head">йога-туры: что это и зачем</p>
-								<p class="link"><a href="http://yogastudio.by/yogatour_eto.html" class="maina" target=_blank>Каждый человек иногда пребывает в состоянии стресса и испытывает напряжение и усталость. Он нуждается в психологическом отдыхе и эмоциональной разгрузке. Поспособствовать улучшению телесного и душевного здоровья могут йога-туры.</a></p>
-							</li>
-							<li class="mainli">
-								<p class="head">основные асаны хатха-йоги</p>
-								<p class="link"><a href="http://yogastudio.by/asani-hatha-yogi.html" class="maina" target=_blank>Асана - это устойчивое и комфортное положение тела, воздействующее на мускулы, нервы и железы организма. Они укрепляют тело и предохраняют его от болезней, снимают усталость и успокаивают нервы. Но их главное значение&mdash;в тренировке и дисциплине ума.</a></p>
-							</li>
-							<li class="mainli">
-								<p class="head">комплексы хатха-йоги</p>
-								<p class="link"><a href="http://yogastudio.by/komplexi-hatha-yogi.html" class="maina" target=_blank>В хатха-йоге существуют специальные комплексы упражнений, направленные на проработку определенных частей тела, работу с энергетическиими центрами, укрепление мышц или раскрытие суставов.</a></p>
-							</li>
-							<li class="mainli">
-								<p class="head">бандхи (замки)</p>
-								<p class="link"><a href="http://yogastudio.by/bandhi.html" class="maina" target=_blank>Бандхи - это небольшая, но очень важная группа йоговских упражнений. Слово "бандха" означает «держать, удерживать, привязывать». Замки позволяют практикующему управлять различными органами и нервами тела.</a></p>
-							</li>
-						</ul>
+						</div>
 					</div>
 					<div class="clear"></div>
 				</div>
-			</div><!-- .content -->
+			</div>
 			<footer>
 				<div class="line"></div>
 				<div class="content">
 					<div class="shortinfo">
 						<h3 class="white">О нас</h3>
 						<p style="color: white;">Наша компания готова помочь вам и с первым и со вторым аспектом данной задачи. В нашем каталоге вы сможете подобрать желаемый вариант материала и сразу заказать профессиональную укладку на вашем участке. Вниманию покупателей всегда доступна качественная и прочная тротуарная плитка от производителя по оптимальной стоимости.</p>
-					</div><!-- .shortinfo -->
+					</div>
 					<div class="shortinfo">
 						<h3 class="white">Реквизиты</h3>
 						<p style="color: white;">ООО «Производственная компания Мастерстрой»<br>
@@ -111,25 +83,26 @@
 							Р/С: : BY00 BPSB 0000 0000 0000 0000 0000<br>
 							В ОАО «СБЕР БАНК» БИК BPSBBY2X в BYN<br>
 							Банк: BY43BPSB30123273720179330000</p>
-					</div><!-- .shortinfo -->
+					</div>
 					<div class="shortinfo">
 						<h3 class="white">Рассылка</h3>
 						<p style="color: white;">Подпишитесь на нашу рассылку, чтобы получать информацию о проходящих акциях регулярно!</p>
 						<form method=post action='https://www.it-academy.by/'>
-							<input type="text" style="color:rgb(166,175,176); background-color: white; text-align: center;" name="e-mail" placeholder="ваш e-mail" class="borderless">
-							<button type="submit" style="text-align: center;">Подписаться</button>
+							<input type="text" style="color:rgb(166,175,176); background-color: white;" name="e-mail" placeholder="ваш e-mail" class="borderless">
+							<button type="submit" class="btn btn-success" style="text-align: right; width: auto;">Подписаться</button>
 						</form>
-					</div><!-- .shortinfo -->
+					</div>
 					<div class="shortinfo">
 						<h3 class="white">Контакты</h3>
 						<p style="color: white;">г. Минск, ул. Брикета, 1, 1-й этаж, офис 111.</p>
 						<ul>
-							<li style="color: white;"><span style="color: white;">Телефон:&nbsp; </span> +375 (29) 115-51-71</li>
+							<li style="color: white;"><span style="color: white;">Телефон:&nbsp; </span> +375 (29) 111-11-11</li>
 							<li><span>E-mail:&nbsp; </span> <span>masterstr@mail.ru</span></li>
 						</ul>
-					</div><!-- .shortinfo -->
+					</div>
 					<div class="clear"></div>
-				</div><!-- .content -->		
-			</footer>	
+				</div>	
+			</footer>
+			<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
 </html>
