--- a/Exam_maket/kontakty.html
+++ b/Exam_maket/kontakty.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 </head>
 <body>
 	<body class="home_page">
@@ -25,24 +26,24 @@
 						 <a href="kontakty.html" class="chosen">контакты</a>
 					 </nav>	
 					 <div class="clear"></div>
-				 </div><!-- .content -->
+				 </div>
 			</header>	
             <div class="content">
                 <div class="baseinfo">
-                    <h2 class="dashed">контакты</h2>
-                    <p class="description">Наш зал находится недалеко от центра, в семи минутах хотьбы от ст. метро &laquo;Молодежная&raquo;. К нам довольно легко добраться любым видом транспорта.</p>
-                </div><!-- .baseinfo-->
+                    <h2 class="dashed">Контакты</h2>
+                    <p class="description" style="color: black;">Прием заявок ежедневно с 08 до 23.00 | Производство пн-пт с 09.00 до 18.00</p>
+                </div>
                 <div class="map">
-                    <script type="text/javascript" charset="utf-8" src="http://api-maps.yandex.ru/services/constructor/1.0/js/?sid=Nu1lXlxkdSqWj3pHMEIRxGy_CN_VWDiJ&width=1130&height=300"></script>
+					<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Af14b6822a9aa448a67029a9bc365d18efd2b6db7bf84724f2e5cda91ca82655a&amp;width=1250&amp;height=500&amp;lang=ru_RU&amp;scroll=true"></script>
                 </div><!-- .map -->
                 <div class="adresscontainer">
                     <h3 class="lined">Наши контакты</h3>
-                    <p class="short">Связавшись с нашим администратором, Вы можете записаться на занятия или семинары, а также получить подробную информацию о них.</p>
-                    <p class="short">По вопросам переносов или отмены занятий, просим также обращаться к нашему администратору.</p>
-                    <ul>
-                            <li><span>Адрес:&nbsp; </span> г. Минск, ул. Бирюзова, 11,<br>5&ndash;й этаж</li>
-                            <li><span>Телефон:&nbsp; </span> +375 (29) 115-51-71</li>
-                            <li><span>E-mail:&nbsp; </span> <span><a href="mailto:folezhok@gmail.com" target="_top" class="bluelink">folezhok@gmail.com</a></span></li>
+                    <p class="short" style="color: black; padding-bottom: 0;">Если у вас есть какие-то вопросы, пожалуйста, не стесняйтесь и напишите нам.</p>
+                    <p class="short" style="color: black;">Если вы не получили немедленный ответ, это значит, что мы путешествуем где-то у черта на куличках. Мы ответим, как только сможем. Обещаем!</p>
+                    <ul style="padding-left: px;">
+                            <li><span>Адрес:&nbsp; </span> г. Минск, ул. Брикета, 1,<br>1&ndash;й этаж, офис 111.</li>
+                            <li><span>Телефон:&nbsp; </span> +375 (29) 111-11-11</li>
+                            <li><span>E-mail:&nbsp; </span> <span><a href="mailto:masterstr@mail.ru" target="_top" class="bluelink">masterstr@mail.ru</a></span></li>
                     </ul>
                 </div><!-- .adresscontainer -->
                 <div class="clear"></div>
@@ -66,20 +67,21 @@
 						<h3 class="white">Рассылка</h3>
 						<p style="color: white;">Подпишитесь на нашу рассылку, чтобы получать информацию о проходящих акциях регулярно!</p>
 						<form method=post action='https://www.it-academy.by/'>
-							<input type="text" style="color:rgb(166,175,176); background-color: white; text-align: center;" name="e-mail" placeholder="ваш e-mail" class="borderless">
-							<button type="submit" style="text-align: center;">Подписаться</button>
+							<input type="text" style="color:rgb(166,175,176); background-color: white;" name="e-mail" placeholder="ваш e-mail" class="borderless">
+							<button type="submit" class="btn btn-success" style="text-align: right; width: auto;">Подписаться</button>
 						</form>
 					</div><!-- .shortinfo -->
 					<div class="shortinfo">
 						<h3 class="white">Контакты</h3>
 						<p style="color: white;">г. Минск, ул. Брикета, 1, 1-й этаж, офис 111.</p>
 						<ul>
-							<li style="color: white;"><span style="color: white;">Телефон:&nbsp; </span> +375 (29) 115-51-71</li>
+							<li style="color: white;"><span style="color: white;">Телефон:&nbsp; </span> +375 (29) 111-11-11</li>
 							<li><span>E-mail:&nbsp; </span> <span>masterstr@mail.ru</span></li>
 						</ul>
 					</div><!-- .shortinfo -->
 					<div class="clear"></div>
 				</div><!-- .content -->		
-			</footer>	
+			</footer>
+			<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
 </html>	
