--- a/Exam_maket/vidy.html
+++ b/Exam_maket/vidy.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 </head>
 <body>
 	<body class="home_page">
@@ -95,20 +96,21 @@
 						<h3 class="white">Рассылка</h3>
 						<p style="color: white;">Подпишитесь на нашу рассылку, чтобы получать информацию о проходящих акциях регулярно!</p>
 						<form method=post action='https://www.it-academy.by/'>
-							<input type="text" style="color:rgb(166,175,176); background-color: white; text-align: center;" name="e-mail" placeholder="ваш e-mail" class="borderless">
-							<button type="submit" style="text-align: center;">Подписаться</button>
+							<input type="text" style="color:rgb(166,175,176); background-color: white;" name="e-mail" placeholder="ваш e-mail" class="borderless">
+							<button type="submit" class="btn btn-success" style="text-align: right; width: auto;">Подписаться</button>
 						</form>
 					</div><!-- .shortinfo -->
 					<div class="shortinfo">
 						<h3 class="white">Контакты</h3>
 						<p style="color: white;">г. Минск, ул. Брикета, 1, 1-й этаж, офис 111.</p>
 						<ul>
-							<li style="color: white;"><span style="color: white;">Телефон:&nbsp; </span> +375 (29) 115-51-71</li>
+							<li style="color: white;"><span style="color: white;">Телефон:&nbsp; </span> +375 (29) 111-11-11</li>
 							<li><span>E-mail:&nbsp; </span> <span>masterstr@mail.ru</span></li>
 						</ul>
 					</div><!-- .shortinfo -->
 					<div class="clear"></div>
 				</div><!-- .content -->		
-			</footer>	
+			</footer>
+			<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
 </html>
