--- a/Exam_maket/index.html
+++ b/Exam_maket/index.html
@@ -26,7 +26,7 @@
 						 <a href="kontakty.html">контакты</a>
 					 </nav>	
 					 <div class="clear"></div>
-				 </div><!-- .content -->
+				 </div>
 			</header>		
 			<div class="advert">
 				<div class="banner">
@@ -35,8 +35,8 @@
 					<h3 style="color: black;">Тротуарная плитка</h3>
 					<p style="color: black;">Вам нужна качественная и недорогая тротуарная плитка в Волоколамске? Мы готовы предложить отличную возможность приобрести современные модели с высокими показателями эстетики и механической стойкости напрямую от производителя – компании «Мастер Строй».</p>
 					<a href="aboutus.html" class="attention" style="color: black;">О нас</a>
-				</div><!-- .content -->
-			</div><!-- .advert -->
+				</div>
+			</div>
 			<div class="services">
 				<div class="content">
 					<h2 class="dashed" style="color: black;">Виды</h2>
@@ -47,26 +47,26 @@
 							<img src="images/vibroplitka.jpg" title="vibroplitka" alt="vibroplitka">
 							<p class="short" style="color: black;">Самый дешевый и простой вариант производства. Раствор заливают в форму и помещают на специальный стол. От вибрации масса густеет и отправляется в камеру на сушку.</p>
 							<button><a href="vidy.html" target=_blank>подробнее</a></button>
-						</div><!-- .type-->
+						</div>
 						<div class="type">
 							<h3>Вибропресованная плитка</h3>
 							<img src="images/vibropresovannaya.jpg" title="vibropressovanaya" alt="vibropress">
 							<p class="short" style="color: black;">Если сравнивать с предыдущим вариантом, эти изделия являются более прочными. Другая технология производства отражается на качестве готового продукта. Формы заполняют раствором и отправляют под вибропресс.</p>
 							<button><a href="vidy.html" target=_blank>подробнее</a></button>
-						</div><!-- .type-->
+						</div>
 						<div class="type">
 							<h3>Гиперпрессованная плитка</h3>
 							<img src="images/giperpress.jpg" title="giperpress" alt="giperpress"></a>
 							<p class="short" style="color: black;">Раствор прессуют под высоким давлением на уникальных гидропрессах. Частички бетона склеиваются. В результате получается готовый продукт, обладающий сверхпрочными характеристиками.
 							</p>
 							<button><a href="vidy.html" target=_blank>подробнее</a></button>
-						</div><!-- .type -->
+						</div>
 						<div class="clear"></div>
-					</div><!-- .classtype -->
-				</div><!-- .content -->
-			</div><!-- .services -->
+					</div>
+				</div>
+			</div>
 			<div class="about">
-				<div class="line"></div><!-- .line -->
+				<div class="line"></div>
 				<div class="content">
 					<h2 class="dashed">О нас</h2>
 					<p class="description" style="color: black;" >Задача нашего производства, сделать плитку, которая прослужит более 30 лет. Для этого мы полностью отказались от бюджетного сырья, производим на дорогостоящей европейской линии и делаем повышенную марку прочности бетона.</p>
@@ -76,32 +76,32 @@
 							<img src="images/oNasPlitka.png" title="oNasPlitka" alt="oNasPlitka"></a>
 							<p class="short" style="color: black;">Наша Производственная компания МастерСтрой получила свое начало от строительной компании "Все о стройке". Мы продавали в больших объемах тротуарную плитку и успели поработать почти со всеми беларускими производителями.</p>
 							<button><a href="aboutus.html" target=_blank>подробнее</a></button>
-						</div><!-- .type -->
+						</div>
 						<div class="type">
 							<h3 class="white">Контакты</h3>
 							<img src="images/evropa.jpg" title="evropa" alt="evropa"></a>
 							<p class="short" style="color: black;">ШОУ-РУМы находятся в г .Минск, ул. Сурганова, 57Б (ТЦ ЕВРОПА), 5 этаж, оф.160 и 6 этаж, офис 186. Работаем с 9:00 до 18:00 пн-пт. Если Вы планируете приехать в шоу-рум для оплаты и заключения договора, возможен выезд дежурного специалиста по продажам в шоу-рум.</p>
 							<button><a href="aboutus.html" target=_blank>подробнее</a></button>
-						</div><!-- .type -->
+						</div>
 						<div class="clear"></div>
-					</div><!-- .info -->
-				</div><!-- .content -->
-			</div><!-- .about -->
+					</div>
+				</div>
+			</div>
 			<div class="event">
 				<div class="content">
 					<h3>Сколько лет компании?</h3>
 					<p class="short" style="color: black;">Мы производим тротуарную плитку с 2011 г. под юр. лицом ЧТПУП “Мастерстрой”. В 2021 году мы завезли на территорию Беларуси новую польскую технологию производства и запустили новый бренд GARD под отдельным юр. лицом ООО “Производственная компания Мастерстрой”.</p>
 					<img src="images/banner_bottom.jpg" alt="banner_plit" title="banner_plit">
 					<p class="short" style="color: black;">Также, благодаря отделу логистики, мы снимаем с Вас заботу о доставке и разгрузке, делаем это максимально быстро и за минимальные деньги. Звоните или оставляйте заявку на сайте, и убедитесь в этом сами.</p>
-				</div><!-- .content -->
-			</div><!-- .event -->
+				</div>
+			</div>
 			<footer>
-				<div class="line"></div><!-- .line -->
+				<div class="line"></div>
 				<div class="content">
 					<div class="shortinfo">
 						<h3 class="white">О нас</h3>
 						<p style="color: white;">Наша компания готова помочь вам и с первым и со вторым аспектом данной задачи. В нашем каталоге вы сможете подобрать желаемый вариант материала и сразу заказать профессиональную укладку на вашем участке. Вниманию покупателей всегда доступна качественная и прочная тротуарная плитка от производителя по оптимальной стоимости.</p>
-					</div><!-- .shortinfo -->
+					</div>
 					<div class="shortinfo">
 						<h3 class="white">Реквизиты</h3>
 						<p style="color: white;">ООО «Производственная компания Мастерстрой»<br>
@@ -109,7 +109,7 @@
 							Р/С: : BY00 BPSB 0000 0000 0000 0000 0000<br>
 							В ОАО «СБЕР БАНК» БИК BPSBBY2X в BYN<br>
 							Банк: BY43BPSB30123273720179330000</p>
-					</div><!-- .shortinfo -->
+					</div>
 					<div class="shortinfo">
 						<h3 class="white">Рассылка</h3>
 						<p style="color: white;">Подпишитесь на нашу рассылку, чтобы получать информацию о проходящих акциях регулярно!</p>
@@ -117,17 +117,17 @@
 							<input type="text" style="color:rgb(166,175,176); background-color: white;" name="e-mail" placeholder="ваш e-mail" class="borderless">
 							<button type="submit" class="btn btn-success" style="text-align: right; width: auto;">Подписаться</button>
 						</form>
-					</div><!-- .shortinfo -->
+					</div>
 					<div class="shortinfo">
 						<h3 class="white">Контакты</h3>
 						<p style="color: white;">г. Минск, ул. Брикета, 1, 1-й этаж, офис 111.</p>
 						<ul>
-							<li style="color: white;"><span style="color: white;">Телефон:&nbsp; </span> +375 (29) 115-51-71</li>
+							<li style="color: white;"><span style="color: white;">Телефон:&nbsp; </span> +375 (29) 111-11-11</li>
 							<li><span>E-mail:&nbsp; </span> <span>masterstr@mail.ru</span></li>
 						</ul>
-					</div><!-- .shortinfo -->
+					</div>
 					<div class="clear"></div>
-				</div><!-- .content -->		
+				</div>	
 			</footer>
 			<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>	
 </body>
