Exam_maket_kontakty

--- a/Exam_maket/kontakty.html
+++ b/Exam_maket/kontakty.html
@@ -35,26 +35,26 @@
                 </div>
                 <div class="map">
 					<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Af14b6822a9aa448a67029a9bc365d18efd2b6db7bf84724f2e5cda91ca82655a&amp;width=1250&amp;height=500&amp;lang=ru_RU&amp;scroll=true"></script>
-                </div><!-- .map -->
+                </div>
                 <div class="adresscontainer">
                     <h3 class="lined">Наши контакты</h3>
-                    <p class="short" style="color: black; padding-bottom: 0;">Если у вас есть какие-то вопросы, пожалуйста, не стесняйтесь и напишите нам.</p>
-                    <p class="short" style="color: black;">Если вы не получили немедленный ответ, это значит, что мы путешествуем где-то у черта на куличках. Мы ответим, как только сможем. Обещаем!</p>
-                    <ul style="padding-left: px;">
+                    <p class="short" style="color: black; padding-bottom: 0;padding-left: 0;">Если у вас есть какие-то вопросы, пожалуйста, не стесняйтесь и напишите нам.</p>
+                    <p class="short" style="color: black;padding-left: 0;">Если вы не получили немедленный ответ, это значит, что мы путешествуем где-то у черта на куличках. Мы ответим, как только сможем. Обещаем!</p>
+                    <ul style="padding-left: 0px;">
                             <li><span>Адрес:&nbsp; </span> г. Минск, ул. Брикета, 1,<br>1&ndash;й этаж, офис 111.</li>
                             <li><span>Телефон:&nbsp; </span> +375 (29) 111-11-11</li>
                             <li><span>E-mail:&nbsp; </span> <span><a href="mailto:masterstr@mail.ru" target="_top" class="bluelink">masterstr@mail.ru</a></span></li>
                     </ul>
-                </div><!-- .adresscontainer -->
+                </div>
                 <div class="clear"></div>
-            </div><!-- .content -->	
+            </div>
             <footer>
-				<div class="line"></div><!-- .line -->
+				<div class="line"></div>
 				<div class="content">
 					<div class="shortinfo">
 						<h3 class="white">О нас</h3>
 						<p style="color: white;">Наша компания готова помочь вам и с первым и со вторым аспектом данной задачи. В нашем каталоге вы сможете подобрать желаемый вариант материала и сразу заказать профессиональную укладку на вашем участке. Вниманию покупателей всегда доступна качественная и прочная тротуарная плитка от производителя по оптимальной стоимости.</p>
-					</div><!-- .shortinfo -->
+					</div>
 					<div class="shortinfo">
 						<h3 class="white">Реквизиты</h3>
 						<p style="color: white;">ООО «Производственная компания Мастерстрой»<br>
@@ -62,7 +62,7 @@
 							Р/С: : BY00 BPSB 0000 0000 0000 0000 0000<br>
 							В ОАО «СБЕР БАНК» БИК BPSBBY2X в BYN<br>
 							Банк: BY43BPSB30123273720179330000</p>
-					</div><!-- .shortinfo -->
+					</div>
 					<div class="shortinfo">
 						<h3 class="white">Рассылка</h3>
 						<p style="color: white;">Подпишитесь на нашу рассылку, чтобы получать информацию о проходящих акциях регулярно!</p>
@@ -70,7 +70,7 @@
 							<input type="text" style="color:rgb(166,175,176); background-color: white;" name="e-mail" placeholder="ваш e-mail" class="borderless">
 							<button type="submit" class="btn btn-success" style="text-align: right; width: auto;">Подписаться</button>
 						</form>
-					</div><!-- .shortinfo -->
+					</div>
 					<div class="shortinfo">
 						<h3 class="white">Контакты</h3>
 						<p style="color: white;">г. Минск, ул. Брикета, 1, 1-й этаж, офис 111.</p>
@@ -78,9 +78,9 @@
 							<li style="color: white;"><span style="color: white;">Телефон:&nbsp; </span> +375 (29) 111-11-11</li>
 							<li><span>E-mail:&nbsp; </span> <span>masterstr@mail.ru</span></li>
 						</ul>
-					</div><!-- .shortinfo -->
+					</div>
 					<div class="clear"></div>
-				</div><!-- .content -->		
+				</div>	
 			</footer>
 			<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
